添加样式文件

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,27 @@
-<p>
+<p class="title">
 <strong>Title:</strong>
 <%=@article.title%>
 </p>
-<p>
+<p class="text">
 <strong>Text:</strong>
 <%=@article.text%>
 </p>
 <h2>Comments</h2>
 <%= render @article.comments %>
 <h2>Add a comment:</h2>
-<%= render "comments/form" %>
-<%= link_to 'Edit Article', edit_article_path(@article) %> |
-<%= link_to 'Back to Articles', articles_path %>
+<p>
+  <%= render "comments/form" %>
+  <%= link_to 'Edit Article', edit_article_path(@article) %> |
+  <%= link_to 'Back to Articles', articles_path %>
+</p>
+<style>
+  p {
+    text-align: center;
+    font-size: 30px;
+    color: aqua;
+  }
+  h2 {
+    text-align: center;
+    color: #B00100;
+  }
+</style>
