--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,3 +11,10 @@
     <%= f.submit %>
   </p>
 <% end %>
+<style>
+  p {
+    text-align: center;
+    text-decoration: none;
+    color: #42b983;
+  }
+</style>
