--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,9 @@
 <h1>Hello,Rails!</h1>
-<%=link_to 'Myblog',controller:'articles'%>
+<h1><%=link_to 'Myblog',controller:'articles'%></h1>
+<style>
+  h1 {
+    text-align: center;
+    color: #B00100;
+    font-size: 30px;
+  }
+</style>
