--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,12 @@
-
 <h1>Editing article</h1>
  
 <%=render 'form'%>
  
 <%= link_to 'Back', articles_path %>
+<style>
+  h1 {
+    text-align: center;
+    color: #B00100;
+    font-size: 30px;
+  }
+</style>
