--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 <tr>
 <th>Title</th>
 <th>Text</th>
-<th colspan="2"></th>
+<th colspan="3">Handle</th>
 </tr>
 <% @articles.each do |article| %>
 <tr>
@@ -17,6 +17,33 @@
 </tr>
 <% end %>
 </table>
-<%= link_to 'New article',new_article_path %>
+<p><%= link_to 'New article',new_article_path %></p>
 
-
+<style>
+  h1 {
+    text-align: center;
+    color: #B00100;
+    font-size: 80px;
+  }
+  table {
+    width: 60%;
+    margin: 10% auto;
+    background: #fff;
+    border: 2px solid #42b983;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 1.5;
+  }
+  th {
+    height: 50px;
+    color: #fff;
+    background: #42b983;
+    font-size: 18px;
+    font-weight: 700;
+  }
+  p {
+    text-align: center;
+    text-decoration: none;
+    font-size: 60px;
+  }
+</style>
