--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,13 @@
-<h1>New Articles</h1>
-<%=render 'form'%>
+<h1 class="new">New Articles</h1>
+<p><%=render 'form'%>
 <%=link_to'Back',articles_path%>
+</p>
+<style>
+  .new {
+    text-align: center;
+    color: #B00100;
+  }
+  p {
+    text-align: center;
+  }
+</style>
