--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,14 +1,28 @@
-<p>
+<p class="commenter">
   <strong>Commenter:</strong>
   <%= comment.commenter %>
 </p>
  
-<p>
+<p class="comment">
   <strong>Comment:</strong>
   <%= comment.body %>
 </p>
-<p>
+<p class="delete">
   <%= link_to 'Destroy Comment', [comment.article, comment],
                method: :delete,
                data: { confirm: 'Are you sure?' } %>
 </p>
+<style>
+  .commenter {
+    text-align: center;
+    color: aqua;
+    text-decoration: none;
+  }
+    .comment {
+      text-decoration: none;
+      text-align: center;
+      font-size: 21px;
+      text-shadow: aquamarine;
+    }
+
+</style>
