--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,11 +2,15 @@
  
 <%=render 'form'%>
  
-<%= link_to 'Back', articles_path %>
+<p><%= link_to 'Back', articles_path %></p>
 <style>
   h1 {
     text-align: center;
     color: #B00100;
     font-size: 30px;
+  }
+  p {
+    position: relative;
+    text-align: center;
   }
 </style>
