--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
   <p>
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title,size: "60x12" %>
   </p>
  
   <p>
     <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, size: "60x12" %>
   </p>
  
   <p>
@@ -26,6 +26,7 @@
 <% end %>
 <style>
   p {
+    text-align: center;
     border-radius: 1px ;
     color: #B00100;
   }
