--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -29,7 +29,7 @@
     width: 60%;
     margin: 10% auto;
     background: #fff;
-    border: 2px solid #42b983;
+    border: 2px solid #B00100;
     border-radius: 5px;
     text-align: center;
     line-height: 1.5;
@@ -37,9 +37,9 @@
   th {
     height: 50px;
     color: #fff;
-    background: #42b983;
+    background: #B00100;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 600;
   }
   p {
     text-align: center;
