--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,27 +1,28 @@
-<p class="title">
+<p>
 <strong>Title:</strong>
 <%=@article.title%>
 </p>
-<p class="text">
+<p>
 <strong>Text:</strong>
 <%=@article.text%>
 </p>
-<h2>Comments</h2>
+<p>Comments</p>
 <%= render @article.comments %>
-<h2>Add a comment:</h2>
-<p>
-  <%= render "comments/form" %>
-  <%= link_to 'Edit Article', edit_article_path(@article) %> |
-  <%= link_to 'Back to Articles', articles_path %>
-</p>
+<p>Add a comment:</p>
+  <p><%= render "comments/form" %></p>
+  <p class="link">
+    <%= link_to 'Edit Article', edit_article_path(@article) %>||
+    <%= link_to 'Back to Articles', articles_path %>
+  </p>
 <style>
   p {
     text-align: center;
-    font-size: 30px;
-    color: aqua;
-  }
-  h2 {
-    text-align: center;
+    font-size: 20px;
     color: #B00100;
+  }
+  .link {
+    text-align: center;
+    text-decoration: none;
+    font-size: 30px;
   }
 </style>
