--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,19 @@
-<p>
-<strong>Title:</strong>
-<%=@article.title%>
-</p>
-<p>
-<strong>Text:</strong>
-<%=@article.text%>
-</p>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Text</th>
+  </tr>
+  <td><%= @article.title %></td>
+  <td><%= @article.text %></td>
+</table>
+<!--<p>-->
+<!--<strong>Title:</strong>-->
+<!--<%=@article.title%>-->
+<!--</p>-->
+<!--<p>-->
+<!--<strong>Text:</strong>-->
+<!--<%=@article.text%>-->
+<!--</p>-->
 <p>Comments</p>
 <%= render @article.comments %>
 <p>Add a comment:</p>
@@ -14,6 +22,7 @@
     <%= link_to 'Edit Article', edit_article_path(@article) %>||
     <%= link_to 'Back to Articles', articles_path %>
   </p>
+
 <style>
   p {
     text-align: center;
@@ -24,5 +33,21 @@
     text-align: center;
     text-decoration: none;
     font-size: 30px;
+  }
+  table {
+    width: 60%;
+    margin: auto;
+    background: #fff;
+    border: 2px solid #B00100;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 1.5;
+  }
+  th {
+    height: 50px;
+    color: #fff;
+    background: #B00100;
+    font-size: 18px;
+    font-weight: 600;
   }
 </style>
