--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Listing articles</h1>
-
 <table>
 <tr>
 <th>Title</th>
@@ -23,16 +22,16 @@
   h1 {
     text-align: center;
     color: #B00100;
-    font-size: 80px;
+    font-size: 60px;
   }
   table {
     width: 60%;
-    margin: 10% auto;
+    margin: 5% auto;
     background: #fff;
     border: 2px solid #B00100;
     border-radius: 5px;
     text-align: center;
-    line-height: 1.5;
+    line-height: 1.0;
   }
   th {
     height: 50px;
@@ -40,6 +39,10 @@
     background: #B00100;
     font-size: 18px;
     font-weight: 600;
+  }
+  td {
+    height: 50px;
+    background: #B00100;
   }
   p {
     text-align: center;
