--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,18 +1,25 @@
-<p>
-  <strong>Commenter:</strong>
-  <%= comment.commenter %>
-</p>
- 
-<p>
-  <strong>Comment:</strong>
-  <%= comment.body %>
-</p>
-<p>
-  <%= link_to 'Destroy Comment', [comment.article, comment],
-               method: :delete,
-               data: { confirm: 'Are you sure?' } %>
-</p>
-<style>
+<table>
+  <tr>
+    <th>Commenter</th>
+    <th>Comment</th>
+    <th>Handle</th>
+  </tr>
+  <td><%= comment.commenter %></td>
+  <td><%= comment.body %></td>
+  <td><%= link_to 'Destroy Comment', [comment.article, comment],
+                  method: :delete,
+                  data: { confirm: 'Are you sure?' } %></td>
+</table>
+<!--<p>-->
+  <!--<strong>Commenter:</strong>-->
+  <!--<%= comment.commenter %>-->
+<!--</p>-->
+ <!---->
+<!--<p>-->
+  <!--<strong>Comment:</strong>-->
+  <!--<%= comment.body %>-->
+<!--</p>-->
+<!--<p>-->
 
+<!--</p>-->
 
-</style>
