--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Hello,Rails!</h1>
+<h1>Author : yuanzhenXu</h1>
+<h1>Hubei normal School</h1>
 <h1><%=link_to 'Myblog',controller:'articles'%></h1>
 <style>
   h1 {
