添加登录注册

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,34 +19,11 @@
 <p><%= link_to 'New article',new_article_path %></p>
 
 <style>
-  h1 {
-    text-align: center;
-    color: #B00100;
-    font-size: 60px;
-  }
-  table {
-    width: 60%;
-    margin: 5% auto;
-    background: #fff;
-    border: 2px solid #B00100;
-    border-radius: 5px;
-    text-align: center;
-    line-height: 1.0;
-  }
-  th {
-    height: 50px;
-    color: #fff;
-    background: #B00100;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  td {
-    height: 50px;
-    background: #B00100;
-  }
   p {
     text-align: center;
-    text-decoration: none;
-    font-size: 60px;
+    font-size: 50px;
+    color: #B00100;
+    margin: 1px;
   }
+
 </style>
