--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,17 +10,20 @@
     </ul>
   </div>
   <% end %>
+
   <p>
     <%= f.label :title %><br>
-    <%= f.text_field :title,size: "60x12" %>
+    <%= f.text_field :title, size: "60x12" %>
   </p>
  
   <p>
     <%= f.label :text %><br>
     <%= f.text_area :text, size: "60x12" %>
   </p>
- 
-  <p>
+
+
+
+  <p class="submit">
     <%= f.submit %>
   </p>
 <% end %>
@@ -30,4 +33,6 @@
     border-radius: 1px ;
     color: #B00100;
   }
+
+
 </style>
