--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
+<p class="title">
+  Article Show
+</p>
 <table>
   <tr>
     <th>Title</th>
@@ -28,11 +31,15 @@
     text-align: center;
     font-size: 20px;
     color: #B00100;
+    margin: 1px;
   }
   .link {
     text-align: center;
     text-decoration: none;
     font-size: 30px;
+  }
+  .title {
+    font-size: 50px;
   }
   table {
     width: 60%;
@@ -50,4 +57,9 @@
     font-size: 18px;
     font-weight: 600;
   }
+  td {
+    height: 50px;
+    background-color: #B00100;
+  }
+
 </style>
