--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,20 @@
-<h1>Hello,Rails!</h1>
-<h1>Author : yuanzhenXu</h1>
-<h1>Hubei normal School</h1>
-<h1><%=link_to 'Myblog',controller:'articles'%></h1>
+<dl>
+  <a href="">login</a>
+  <a href="">register</a>
+</dl>
+<div>
+  <h1>Welcome to My Blogs</h1>
+  <h1>Author : yuanzhenXu</h1>
+  <h1><%=link_to 'Myblog',controller:'articles'%></h1>
+</div>
 <style>
-  h1 {
+  div {
+    padding: 20px;
     text-align: center;
     color: #B00100;
     font-size: 30px;
   }
+   dl {
+     float: right;
+   }
 </style>
