--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <dl>
-  <a href="">login</a>
-  <a href="">register</a>
+  <%= link_to 'login',users_url%>
+  <%= link_to 'register',users_url%>
 </dl>
 <div>
   <h1>Welcome to My Blogs</h1>
