完成登录与注册页面

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <dl>
-  <%= link_to 'login',users_url%>
-  <%= link_to 'register',users_url%>
+  <%= link_to 'login'%>
+  <%= link_to 'signup', new_user_path%>
 </dl>
 <div>
   <h1>Welcome to My Blogs</h1>
