--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,9 +3,11 @@
   <%= link_to 'signup', new_user_path%>
 </dl>
 <div>
-  <h1>Welcome to My Blogs</h1>
+  <h1>Welcome to Rails</h1>
   <h1>Author : yuanzhenXu</h1>
   <h1><%=link_to 'Myblog',controller:'articles'%></h1>
+  <p> <%= Time.now %></p>
+
 </div>
 <style>
   div {
