--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,4 @@
+<p id="notice"><%= notice %></p>
 <h1>Listing articles</h1>
 <table>
 <tr>
@@ -18,12 +19,4 @@
 </table>
 <p><%= link_to 'New article',new_article_path %></p>
 
-<style>
-  p {
-    text-align: center;
-    font-size: 50px;
-    color: #B00100;
-    margin: 1px;
-  }
 
-</style>
