--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,7 @@
-<p class="title">
+<p>
   Article Show
 </p>
+<p id="notice"><%= notice %></p>
 <table>
   <tr>
     <th>Title</th>
@@ -26,40 +27,3 @@
     <%= link_to 'Back to Articles', articles_path %>
   </p>
 
-<style>
-  p {
-    text-align: center;
-    font-size: 20px;
-    color: #B00100;
-    margin: 1px;
-  }
-  .link {
-    text-align: center;
-    text-decoration: none;
-    font-size: 30px;
-  }
-  .title {
-    font-size: 50px;
-  }
-  table {
-    width: 60%;
-    margin: auto;
-    background: #fff;
-    border: 2px solid #B00100;
-    border-radius: 5px;
-    text-align: center;
-    line-height: 1.5;
-  }
-  th {
-    height: 50px;
-    color: #fff;
-    background: #B00100;
-    font-size: 18px;
-    font-weight: 600;
-  }
-  td {
-    height: 50px;
-    background-color: #B00100;
-  }
-
-</style>
