--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,3 +1,46 @@
 // Place all the styles related to the articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.new {
+  text-align: center;
+  color: #B00100;
+}
+
+.link {
+  text-align: center;
+  text-decoration: none;
+  font-size: 30px;
+}
+p {
+  text-align: center;
+  border-radius: 1px ;
+  font-size: 30px;
+  position: relative;
+  color: #B00100;
+}
+h1 {
+  text-align: center;
+  color: #B00100;
+  font-size: 30px;
+}
+
+table {
+  width: 60%;
+  margin: auto;
+  background: #fff;
+  border: 2px solid #B00100;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 1.5;
+}
+th {
+  height: 50px;
+  color: #fff;
+  background: #B00100;
+  font-size: 18px;
+  font-weight: 600;
+}
+td {
+  height: 50px;
+  background-color: #B00100;
+}
