--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+div {
+  padding: 20px;
+  text-align: center;
+  color: #B00100;
+  font-size: 30px;
+}
+dl {
+  float: right;
+}
