--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,17 +1,4 @@
+<p id="notice"><%= notice %></p>
 <h1>Editing article</h1>
- 
 <%=render 'form'%>
- 
 <p><%= link_to 'Back', articles_path %></p>
-<style>
-  h1 {
-    text-align: center;
-    color: #B00100;
-    font-size: 30px;
-  }
-  p {
-    position: relative;
-    text-align: center;
-    font-size: 25px;
-  }
-</style>
