添加验证的局部视图

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -42,6 +42,7 @@
 }
 //
 .field_with_errors {
+  text-align: center;
   padding: 2px;
   background-color: red;
   display: table;
@@ -50,8 +51,8 @@
 #error_explanation {
   width: 450px;
   border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
+  //padding: 7px;
+  //padding-bottom: 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 
