--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,9 @@
 <dl>
-  <p><%=link_to 'sign up',controller:'users'%></p>
+  <p><%=link_to 'sign up', controller:'users'%></p>
 </dl>
 <div>
-  <h1>Welcome to Rails </h1>
+  <h1> Welcome to Rails </h1>
   <h1>Author : yuanzhenXu</h1>
   <h1><%=link_to 'Myblog',controller:'articles'%></h1>
-  <p><%= Time.now %></p>
+  <p> time: <%= Time.now %></p>
 </div>
