--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,12 +13,12 @@
 
   <p>
     <%= f.label :title %><br>
-    <%= f.text_field :title, size: "60x12" %>
+    <%= f.text_field :title, class: "comment" , size: "60x12" %>
   </p>
  
   <p>
     <%= f.label :text %><br>
-    <%= f.text_area :text, size: "60x12" %>
+    <%= f.text_area :text, class: "comment" ,size: "60x12" %>
   </p>
 
   <p class="submit">
