--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for([@article, @article.comments.build]) do |f| %>
-    
+
   <p>
-    <%= f.label :commenter %><br>
-    <%= f.text_field :commenter %>
+    <%= f.label :commenter  %><br>
+    <%= f.text_field :commenter, class: "comment" %>
   </p>
   <p>
     <%= f.label :body %><br>
-    <%= f.text_area :body,size: "50x5" %>
+    <%= f.text_area :body, class: "comment" ,size: "50x5" %>
   </p>
   <p>
     <%= f.submit %>
